--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-	<string name="app_name">IDCard</string>
+    <string name="app_name">react-native-idrecognition</string>
 </resources>
